--- a/styles/card.css
+++ b/styles/card.css
@@ -1,7 +1,8 @@
 .cards {
   display: flex;
   flex-direction: row;
-  gap: 15px;
+  flex-wrap: wrap;
+  /*gap: 15px;*/
   width: fit-content;
   margin: auto;
 }
@@ -27,6 +28,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+    flex-wrap: wrap;
   text-align: center;
   height: 100px;
   width: 100px;
@@ -34,6 +36,9 @@
   color: white;
   cursor: pointer;
   transition: 400ms;
+  margin: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 
